syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Ian-Balijawa/simplebank/pb";

message Account {
    int64 id = 1;
    string owner = 2;
    int64 balance = 3;
    string currency = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Entry {
    int64 id = 1;
    int64 account_id = 2;
    int64 amount = 3;
    google.protobuf.Timestamp created_at = 4;
}

message Transfer {
    int64 id = 1;
    int64 from_account_id = 2;
    int64 to_account_id = 3;
    int64 amount = 4;
    google.protobuf.Timestamp created_at = 5;
}

message AccountLimit {
    int64 account_id = 1;
    int64 daily_transfer_limit = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message AccountAlert {
    int64 account_id = 1;
    int64 low_balance_threshold = 2;
    int64 high_balance_threshold = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}
