syntax = "proto3";

package pb;

import "account.proto";
import "common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/Ian-Balijawa/simplebank/pb";

message ListTransfersRequest {
    int64 account_id = 1;
    int32 page_id = 2;
    int32 page_size = 3;
    TransferDirection direction = 4;
    google.protobuf.Int64Value min_amount = 5;
    google.protobuf.Int64Value max_amount = 6;
    google.protobuf.Timestamp from_time = 7;
    google.protobuf.Timestamp to_time = 8;
    SortOrder sort_order = 9;
}

message ListTransfersResponse {
    repeated Transfer transfers = 1;
}
